tests/test_moto_api/extensions/valid_examples/noop_extension_with_multiple_classes.py
from moto.extensions import AbstractExtension


class SomeClass:
    pass


class OtherClass:
    pass


class NoOpExtension(AbstractExtension):
    def extension_id(self):
        return "noop with classes"
